--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 
-    <title>E Commerce App</title>
+    <title>E Commerce Website</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
